# MaxSimE

./: README.md  pyproject.toml
legacy/: README.md
src/maxsime/: __init__.py  core.py  data_structures.py  utils.py  visualization.py
src/maxsime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_core.py  test_visualization.py
